--- a/src/app.html
+++ b/src/app.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <title>Splendid Food</title>
-    <link rel="stylesheet" href="styles/style.min.css">
-    <link rel="icon" href="../public/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../public/favicon.ico" type="image/ico">
+    <link rel="stylesheet" href="styles/style.min.css" />
+    <link rel="icon" href="../public/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../public/favicon.ico" type="image/ico" />
   </head>
+
   <body>
-
     <div id="app">
-
       <header class="top-bar spread">
         <nav class="top-bar-nav">
           <a href="#" class="top-bar-link">
@@ -23,9 +22,10 @@
             <span>Past Orders</span>
           </a>
         </nav>
-        <a href="#" class="top-bar-cart-link">
+        <!-- making the cart icon clickable -->
+        <a @click="toggleSidebar" class="top-bar-cart-link">
           <i class="icofont-cart-alt icofont-1x"></i>
-          <span>Cart (0)</span>
+          <span>Cart ({{ totalQuantity }})</span>
         </a>
       </header>
 
@@ -36,162 +36,191 @@
       </div>
 
       <main class="wrapper">
-
         <h2>Recommended</h2>
 
         <div class="recommended">
-
-          <div class="card">
-            <div class="card-title">
-              Carrots
-            </div>
+          <!-- looping over the items in the json file -->
+          <div
+            v-for="(product, i) in inventory.slice(0,3)"
+            :key="product.id"
+            class="card"
+          >
+            <div class="card-title">{{ product.name }}</div>
             <div class="card-body">
-              <i class="icofont-10x icofont-carrot"></i>
+              <i class="icofont-10x icofont-{{ product.icon }}"></i>
               <form>
                 <div class="row">
                   <div class="cell">
                     <label>Type:</label>
                   </div>
                   <div class="cell">
-                    <em>Vegetable</em>
+                    <em>{{ product.type }}</em>
                   </div>
                 </div>
                 <div class="row">
                   <div class="cell">
                     <label>Price:</label>
                   </div>
-                  <div class="cell">
-                    $4.82
-                  </div>
+                  <div class="cell">${{ product.price.USD }}</div>
                 </div>
                 <div class="row">
                   <div class="cell">
                     <label>Quantity:</label>
                   </div>
                   <div class="cell">
-                    <input type="number" v-model.number="inventory.carrots">
+                    <!-- adding the number modifier to v-model to convert the string to a number -->
+                    <!-- using index to access the quantity of different items -->
+                    <input
+                      type="number"
+                      min="1"
+                      v-model.number="product.quantity"
+                    />
                   </div>
                 </div>
               </form>
             </div>
             <div class="card-footer">
-              <button @click="addToCart('carrots')" class="btn btn-light">
+              <button @click="addToCart(product.name, i)" class="btn btn-light">
                 Add to cart
               </button>
             </div>
           </div>
-
-          <div class="card">
-            <div class="card-title">
-              Pineapples
-            </div>
-            <div class="card-body">
-              <i class="icofont-10x icofont-pineapple"></i>
-              <form>
-                <div class="row">
-                  <div class="cell">
-                    <label>Type:</label>
-                  </div>
-                  <div class="cell">
-                    <em>Fruit</em>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Price:</label>
-                  </div>
-                  <div class="cell">
-                    $1.62
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Quantity:</label>
-                  </div>
-                  <div class="cell">
-                    <input type="number" v-model="inventory.pineapples">
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="card-footer">
-              <button class="btn btn-light">Add to cart</button>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-title">
-              Cherries
-            </div>
-            <div class="card-body">
-              <i class="icofont-10x icofont-cherry"></i>
-              <form>
-                <div class="row">
-                  <div class="cell">
-                    <label>Type:</label>
-                  </div>
-                  <div class="cell">
-                    <em>Fruit</em>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Price:</label>
-                  </div>
-                  <div class="cell">
-                    $1.04
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Quantity:</label>
-                  </div>
-                  <div class="cell">
-                    <input type="number" v-model="inventory.cherries">
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="card-footer">
-              <button class="btn btn-light">Add to cart</button>
-            </div>
-          </div>
-
         </div>
-
       </main>
 
-      <footer>
-      </footer>
+      <!-- Adding the custom component sidebar created on line 164. -->
+      <sidebar
+        v-if="showSidebar"
+        :toggle="toggleSidebar"
+        :cart="cart"
+        :inventory="inventory"
+        :remove="removeItem"
+      />
 
+      <footer></footer>
     </div>
-      
-    <script src="https://unpkg.com/vue@next"></script>
+
+    <script src="https://unpkg.com/vue@3"></script>
     <script>
+      // capitalize V
       let app = Vue.createApp({
         data() {
           return {
-            inventory: {
-              carrots: 0,
-              pineapples: 0,
-              cherries: 0
-            },
-            cart: {
-              carrots: 0,
-              pineapples: 0,
-              cherries: 0
-            }
+            showSidebar: false,
+            // track inventory
+            inventory: [],
+            cart: {},
           }
         },
-        methods: {
-          addToCart(type) {
-            this.cart[type] += this.inventory[type]
-            console.log(this.cart)
+        // total quantity showing on cart
+        computed: {
+          totalQuantity(){
+            return Object.values(this.cart).reduce((acc, curr) =>{
+              return acc + curr
+            }, 0)
           }
-        }
-      })
+        },
+        // Making the add to cart method clickable
+        methods: {
+          addToCart(name, index) {
+            if (!this.cart[name]) this.cart[name] = 0;
+            console.log(name, index);
+            // receive no of items and name
+            (this.cart[name] += this.inventory[index].quantity),
+              console.log(this.cart);
+            this.inventory[index].quantity = ''
+          },
+          // hiding and showing the sidebar
+          toggleSidebar() {
+            this.showSidebar = !this.showSidebar;
+          },
+          // removing items from the cart
+          removeItem(name){
+            delete this.cart[name]
+          }
+        },
+        // Adding lifecycle hooks
+        async mounted() {
+          // making an asychronous call using json
+          // fetching data from the json file
+          const res = await fetch("./food.json");
+          const data = await res.json();
+          this.inventory = data;
+        },
+      });
 
-      app.mount('#app')
+      app.component("sidebar", {
+        props: ["toggle", "cart", "inventory", 'remove'],
+        // Watches the changes in variables and updates the results
+        methods: {
+          // getting the price of each product
+          getPrice(name) {
+            const product = this.inventory.find((p) => {
+              return p.name === name
+            });
+            return product.price.USD
+          },
+          // Calculating the total cost of items using vue js
+          calculateTotal() { // [key, value]
+            // returning the value to 2 decimal points
+            const total = Object.entries(this.cart).reduce(
+              (acc, curr, index) => {
+                return acc + (curr[1] * this.getPrice(curr[0]))
+              }, 0)
+            return total.toFixed(2)
+          }
+        },
+        template: `
+        <aside class="cart-container">
+        <div class="cart">
+          <h1 class="cart-title spread">
+            <span>
+              Cart
+              <i class="icofont-cart-alt icofont-1x"></i>
+            </span>
+            <button @click="toggle" class="cart-close">&times;</button>
+          </h1>
+
+          <div class="cart-body">
+            <table class="cart-table">
+              <thead>
+                <tr>
+                  <th><span class="sr-only">Product Image</span></th>
+                  <th>Product</th>
+                  <th>Price</th>
+                  <th>Qty</th>
+                  <th>Total</th>
+                  <th><span class="sr-only">Actions</span></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr v-for="(quantity, key, i) in cart" :key="i">
+                  <td><i class="icofont-carrot icofont-3x"></i></td>
+                  <td>{{ key }}</td>
+                  <td>\${{ getPrice(key) }}</td>
+                  <td class="center"> {{ quantity }} </td>
+                  <td> \${{ quantity * getPrice(key)}}</td>
+                  <td class="center">
+                    <button @click="remove(key)" class="btn btn-light cart-remove">
+                      &times;
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+
+            <p v-if="!Object.keys(cart).length" class="center"><em>No items in cart</em></p>
+            <div class="spread">
+              <span><strong>Total:</strong> \${{ calculateTotal() }}</span>
+              <button class="btn btn-light">Checkout</button>
+            </div>
+          </div>
+        </div>
+      </aside>
+        `,
+      });
+
+      app.mount("#app");
     </script>
   </body>
 </html>
